syntax = "proto3";

option go_package = "./pb";

message AcknowledgeMessage {
  string message = 1;
}
