syntax = "proto3";

import "AcknowledgeMessage.proto";

message MultipleAcknowledgeMessage {
  repeated AcknowledgeMessage acknowledges = 1;
}
